--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas reiciendis a officia omnis maxime ipsam voluptatem
         quidem sed veniam harum impedit odio sapiente molestias saepe, commodi fuga. Rerum, similique aut?</p>
 
+        <h2>Titulo 2 </h2>
 </body>
 
 </html>
