--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script type="text/javascript" src="./script.js"></script>
+    <title>Aula10</title>
 </head>
 
 <body>
@@ -12,7 +13,8 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas reiciendis a officia omnis maxime ipsam voluptatem
         quidem sed veniam harum impedit odio sapiente molestias saepe, commodi fuga. Rerum, similique aut?</p>
 
-        <h2>Titulo 2 </h2>
+    <h2>Titulo 2 </h2>
+    <button type="button" onclick="msg()">clique aki</button>
 </body>
 
 </html>
